[package]
name = "tx-util"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hex = { version = "0.4.3", features = [] }
k256 = { version = "0.13.3", features = [] }
pest = { version = "2.7.10", features = [] }
pest_derive = { version = "2.7.10", features = [] }
sha3 = { version = "0.10.8", features = [] }
