[package]
name = "tx-util"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.7.6", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
k256 = "0.13.3"
pest = "2.7.10"
pest_derive = "2.7.10"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sha3 = "0.10.8"
validator = { version = "0.18.1", features = ["derive"] }
