[package]
name = "tx-util"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.7.6", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
hex = "0.4.3"
k256 = "0.13.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sha3 = "0.10.8"

[dev-dependencies]
assert_cmd = "2.0.14"
